@@ -38,7 +38,7 @@
  *
  *      %W% (Berkeley) %G%
  *
- * $Id: map.c,v 1.10 2000/11/05 13:03:08 ib42 Exp $
+ * $Id: map.c,v 1.11 2000/11/22 11:17:56 ib42 Exp $
  *
  */
 
@@ -65,6 +65,7 @@
  * there is no way that 2^32 generation numbers could ever
  * be allocated by a single run of amd - there is simply
  * not enough cpu time available.
+ * Famous last words... -Ion
  */
 static u_int am_gen = 2;	/* Initial generation number */
 static int timeout_mp_id;	/* Id from last call to timeout */
@@ -319,7 +320,7 @@ init_map(am_node *mp, char *dir)
   mp->am_attr.ns_status = NFS_OK;
   mp->am_fattr = gen_fattr;
   mp->am_fattr.na_fsid = 42;
-  mp->am_fattr.na_fileid = 0;
+  mp->am_fattr.na_fileid = mp->am_gen;
   mp->am_fattr.na_atime.nt_seconds = clocktime();
   mp->am_fattr.na_atime.nt_useconds = 0;
   mp->am_fattr.na_mtime = mp->am_fattr.na_ctime = mp->am_fattr.na_atime;
